--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 python-dotenv==0.19.0
+PyYAML==6.0
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
