--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ httplib2==0.19.1
 idna==3.2
 multidict==5.1.0
 oauthlib==3.1.1
-pkg-resources==0.0.0
 protobuf==3.18.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -33,4 +32,5 @@ tabulate==0.8.9
 typing-extensions==3.10.0.2
 uritemplate==3.0.1
 urllib3==1.26.6
+websockets==11.0.3
 yarl==1.6.3
