--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,38 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.2.0
-cachetools==4.2.2
-certifi==2021.5.30
-chardet==4.0.0
-charset-normalizer==2.0.6
-discord==1.7.3
-discord-webhook==0.14.0
-discord.py==1.7.3
-google-api-core==2.0.1
-google-api-python-client==2.21.0
-google-auth==2.1.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.6
-googleapis-common-protos==1.53.0
-httplib2==0.19.1
-idna==3.2
-multidict==5.1.0
-oauthlib==3.1.1
-protobuf==3.18.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dotenv==0.19.0
-PyYAML==6.0
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+cachetools==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.3.0
+discord==2.3.2
+discord-webhook==1.3.0
+discord.py==2.3.2
+frozenlist==1.4.0
+google-api-core==2.12.0
+google-api-python-client==2.104.0
+google-auth==2.23.3
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
+googleapis-common-protos==1.61.0
+httplib2==0.22.0
+idna==3.4
+multidict==6.0.4
+oauthlib==3.2.2
+pkg_resources==0.0.0
+protobuf==4.24.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pyparsing==3.1.1
+python-dotenv==1.0.0
+PyYAML==6.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
 six==1.16.0
-tabulate==0.8.9
-typing-extensions==3.10.0.2
-uritemplate==3.0.1
-urllib3==1.26.6
+tabulate==0.9.0
+typing_extensions==4.8.0
+uritemplate==4.1.1
+urllib3==2.0.7
 websockets==11.0.3
-yarl==1.6.3
+yarl==1.9.2
