--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,129 +1,102 @@
 # bot-channel is for commands. special for s-rank snipe alerts
+
 discord:
   token: XXX
   channels:
-    log: 123
-    bot: 123
-    sonar: 123
-    special: 123
+    bot: 1
+    log: 1
+    sonar: 1
+    special: 1
 
-google:
-  spreadsheet: XXX
 
-# sonar urls. If you don't have these, set enable to False.
+# default expansion for commands
+def_exp: 7
+
+# sonar urls. You need at least the asset ones. If you don't have websocket and bootstrap urls, set enable to False.
+
 sonar:
-  enable: true
-  websocket: XXX
-  bootstrap: XXX
+  enable:    True
+  websocket: 
+  bootstrap: 
   asset:
-    world: XXX
-    hunt: XXX
-    zone: XXX
-    region: XXX
-    dc: XXX
+    world:   
+    hunt:    
+    zone:    
+    region:  
+    dc:      
 
 # role id 0 - no shout
 # role id 1 - no ping
 
 webhooks:
   - name: test
-    webhook: xxx
+    webhook: https://
     roles:
-      '6': 123
-      '5': 123
-      '4': 123
-      '3': 123
-      '2': 123
+      7: 123
+      6: 123
+      5: 123
+      4: 123
+      3: 123
+      2: 123
+  - name: test2
+    webhook: https://
+    roles:
+      7: 1
+      6: 1
+      5: 0
+      4: 0
+      3: 0
+      2: 0
 
 worlds:
   - name: Alpha
     short: alpha
-    initial: a
-    '6':
-      channel: 123
-      time: C3
-      status: E3
-    '5':
-      channel: 123
-      time: C20
-      status: E20
+    channels: 
+      7: 123
+      6: 123
+      5: 123
   - name: Lich
     short: lich
-    initial: l
-    '6':
-      channel: 123
-      time: C4
-      status: E4
-    '5':
-      channel: 123
-      time: C21
-      status: E21
+    channels:
+      7: 123
+      6: 123
+      5: 123
   - name: Odin
     short: odin
-    initial: o
-    '6':
-      channel: 123
-      time: C5
-      status: E5
-    '5':
-      channel: 123
-      time: C22
-      status: E22
+    channels: 
+      7: 123
+      6: 123
+      5: 123
   - name: Phoenix
     short: phoe
-    initial: p
-    '6':
-      channel: 123
-      time: C6
-      status: E6
-    '5':
-      channel: 123
-      time: C23
-      status: E23
+    channels:
+      7: 123
+      6: 123
+      5: 123
   - name: Raiden
     short: raiden
-    initial: r
-    '6':
-      channel: 123
-      time: C7
-      status: E7
-    '5':
-      channel: 123
-      time: C24
-      status: E24
+    channels:
+      7: 123
+      6: 123
+      5: 123
   - name: Shiva
     short: shiva
-    initial: s
-    '6':
-      channel: 123
-      time: C8
-      status: E8
-    '5':
-      channel: 123
-      time: C25
-      status: E25
+    channels:
+      7: 123
+      6: 123
+      5: 123
   - name: Twintania
     short: twin
-    initial: t
-    '6':
-      channel: 123
-      time: C9
-      status: E9
-    '5':
-      channel: 123
-      time: C26
-      status: E26
+    channels:
+      7: 123
+      6: 123
+      5: 123
   - name: Zodiark
     short: zodi
-    initial: z
-    '6':
-      channel: 123
-      time: C10
-      status: E10
-    '5':
-      channel: 123
-      time: C27
-      status: E27
+    channels:
+      7: 123
+      6: 123
+      5: 123
 
 statuses:
   - name: Up
@@ -144,3 +117,9 @@ statuses:
   - name: Sniped
     short: sniped
     icon: 🏹
+  - name: Unknown
+    short: unknown
+    icon: ❓
+  - name: Rebooted
+    short: rebooted
+    icon: 🔄
