--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,46 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.2
-aiosignal==1.3.1
-async-timeout==4.0.3
-attrs==23.1.0
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.3.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+async-timeout==5.0.1
+attrs==25.4.0
+audioop-lts==0.2.1
+cachetools==6.2.1
+certifi==2025.11.12
+charset-normalizer==3.4.4
 discord==2.3.2
-discord-webhook==1.3.0
-discord.py==2.3.2
-frozenlist==1.4.0
-google-api-core==2.12.0
-google-api-python-client==2.104.0
-google-auth==2.23.3
-google-auth-httplib2==0.1.1
-google-auth-oauthlib==1.1.0
-googleapis-common-protos==1.61.0
-httplib2==0.22.0
-idna==3.10
-iniconfig==2.0.0
-multidict==6.0.4
-oauthlib==3.2.2
-packaging==23.2
-pluggy==1.3.0
-propcache==0.2.0
-protobuf==4.24.4
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pyparsing==3.1.1
-pytest==7.4.3
-pytest-mock==3.12.0
-python-dotenv==1.0.0
-PyYAML==6.0.1
-requests==2.32.3
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
+discord-webhook==1.4.1
+discord.py==2.6.4
+frozenlist==1.8.0
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.41.1
+google-auth-httplib2==0.2.1
+google-auth-oauthlib==1.2.3
+googleapis-common-protos==1.72.0
+httplib2==0.31.0
+idna==3.11
+iniconfig==2.3.0
+multidict==6.7.0
+oauthlib==3.3.1
+packaging==25.0
+pluggy==1.6.0
+propcache==0.4.1
+proto-plus==1.26.1
+protobuf==6.33.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+Pygments==2.19.2
+pyparsing==3.2.5
+pytest==9.0.1
+python-dotenv==1.2.1
+PyYAML==6.0.3
+requests==2.32.5
+requests-oauthlib==2.0.0
+rsa==4.9.1
+six==1.17.0
 tabulate==0.9.0
-typing_extensions==4.8.0
-uritemplate==4.1.1
-urllib3==2.2.3
-websockets==11.0.3
-yarl==1.17.2
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
+websockets==15.0.1
+yarl==1.22.0
